<package format="2">
  <name>ros_mfc_com</name>
  <version>0.0.1</version>
  <description>ROS-MFC Communication Node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
  
  <!-- 추가 의존성 (예: OpenCV를 사용하려면 opencv와 cv_bridge를 추가) -->
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  
  
  
</package>

